// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`function captures a bucket 1`] = `
"const $cap = {};
$cap[\\"bucket\\"] = new (require(\\"[REDACTED]/wingsdk/src/target-tf-aws/bucket.inflight.ts\\")).BucketClient(process.env[\\"BUCKET_NAME_2025c320\\"]);
async function $proc($cap, event) {
        console.log(\\"Hello, \\" + event.name);
        // TODO: fix this
        await $cap.bucket.put(\\"hello.txt\\", JSON.stringify(event));
      }
exports.handler = async function(event) {
  return await $proc($cap, event);
};"
`;

exports[`function captures a bucket 2`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"cdktfstack_wingapp_Function_IamRole_D839DAD0\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"cdktfstack_wingapp_Function_IamRolePolicy_7D736E5A\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":[\\\\\\"s3:PutObject*\\\\\\",\\\\\\"s3:Abort*\\\\\\"],\\\\\\"Resource\\\\\\":[\\\\\\"\${aws_s3_bucket.cdktfstack_wingapp_Bucket_A3A25CDC.arn}\\\\\\",\\\\\\"\${aws_s3_bucket.cdktfstack_wingapp_Bucket_A3A25CDC.arn}/*\\\\\\"],\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.cdktfstack_wingapp_Function_IamRole_D839DAD0.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"cdktfstack_wingapp_Function_IamRolePolicyAttachment_F24018FA\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.cdktfstack_wingapp_Function_IamRole_D839DAD0.name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"cdktfstack_wingapp_Function_EBD52E07\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"BUCKET_NAME_2025c320\\": \\"\${aws_s3_bucket.cdktfstack_wingapp_Bucket_A3A25CDC.bucket}\\",
            \\"WING_FUNCTION_NAME\\": \\"Function\\"
          }
        },
        \\"function_name\\": \\"Function\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.cdktfstack_wingapp_Function_IamRole_D839DAD0.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.cdktfstack_wingapp_Function_Bucket_A67EF78E.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.cdktfstack_wingapp_Function_S3Object_F34234B4.key}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"cdktfstack_wingapp_Bucket_A3A25CDC\\": {},
      \\"cdktfstack_wingapp_Function_Bucket_A67EF78E\\": {}
    },
    \\"aws_s3_bucket_public_access_block\\": {
      \\"cdktfstack_wingapp_Bucket_PublicAccessBlock_6199A698\\": {
        \\"block_public_acls\\": true,
        \\"block_public_policy\\": true,
        \\"bucket\\": \\"\${aws_s3_bucket.cdktfstack_wingapp_Bucket_A3A25CDC.bucket}\\",
        \\"ignore_public_acls\\": true,
        \\"restrict_public_buckets\\": true
      }
    },
    \\"aws_s3_bucket_server_side_encryption_configuration\\": {
      \\"cdktfstack_wingapp_Bucket_Encryption_3CAE4BE3\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.cdktfstack_wingapp_Bucket_A3A25CDC.bucket}\\",
        \\"rule\\": [
          {
            \\"apply_server_side_encryption_by_default\\": {
              \\"sse_algorithm\\": \\"AES256\\"
            }
          }
        ]
      }
    },
    \\"aws_s3_object\\": {
      \\"cdktfstack_wingapp_Function_S3Object_F34234B4\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.cdktfstack_wingapp_Function_Bucket_A67EF78E.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    }
  }
}"
`;

exports[`function captures a function 1`] = `
"const $cap = {};
async function $proc($cap, event) {
          console.log(\\"Event: \\" + JSON.stringify(event));
          return { greeting: \\"Hello, \\" + event.name + \\"!\\" };
        }
exports.handler = async function(event) {
  return await $proc($cap, event);
};"
`;

exports[`function captures a function 2`] = `
"const $cap = {};
$cap[\\"function\\"] = new (require(\\"[REDACTED]/wingsdk/src/target-tf-aws/function.inflight.ts\\")).FunctionClient(process.env[\\"FUNCTION_NAME_33f250f9\\"]);
async function $proc($cap, event) {
          console.log(\\"Event: \\" + JSON.stringify(event));
          const data = await $cap.function.invoke(JSON.stringify({ name: \\"world\\" }));
          console.log(\\"Greeting: \\" + data.value().greeting);
        }
exports.handler = async function(event) {
  return await $proc($cap, event);
};"
`;

exports[`function captures a function 3`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"cdktfstack_wingapp_Function1_IamRole_A1ECB757\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      },
      \\"cdktfstack_wingapp_Function2_IamRole_E9F3A6C2\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"cdktfstack_wingapp_Function1_IamRolePolicy_8CAA50EC\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"none:null\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"*\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.cdktfstack_wingapp_Function1_IamRole_A1ECB757.name}\\"
      },
      \\"cdktfstack_wingapp_Function2_IamRolePolicy_1AAD879E\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":[\\\\\\"lambda:InvokeFunction\\\\\\"],\\\\\\"Resource\\\\\\":[\\\\\\"\${aws_lambda_function.cdktfstack_wingapp_Function1_82A316AA.arn}\\\\\\"],\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.cdktfstack_wingapp_Function2_IamRole_E9F3A6C2.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"cdktfstack_wingapp_Function1_IamRolePolicyAttachment_6C0B54BA\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.cdktfstack_wingapp_Function1_IamRole_A1ECB757.name}\\"
      },
      \\"cdktfstack_wingapp_Function2_IamRolePolicyAttachment_909427FB\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.cdktfstack_wingapp_Function2_IamRole_E9F3A6C2.name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"cdktfstack_wingapp_Function1_82A316AA\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"Function1\\"
          }
        },
        \\"function_name\\": \\"Function1\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.cdktfstack_wingapp_Function1_IamRole_A1ECB757.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.cdktfstack_wingapp_Function1_Bucket_219A7294.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.cdktfstack_wingapp_Function1_S3Object_2E676DE7.key}\\"
      },
      \\"cdktfstack_wingapp_Function2_702AB6AD\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"FUNCTION_NAME_33f250f9\\": \\"\${aws_lambda_function.cdktfstack_wingapp_Function1_82A316AA.arn}\\",
            \\"WING_FUNCTION_NAME\\": \\"Function2\\"
          }
        },
        \\"function_name\\": \\"Function2\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.cdktfstack_wingapp_Function2_IamRole_E9F3A6C2.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.cdktfstack_wingapp_Function2_Bucket_AA58BB93.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.cdktfstack_wingapp_Function2_S3Object_B219AB6E.key}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"cdktfstack_wingapp_Function1_Bucket_219A7294\\": {},
      \\"cdktfstack_wingapp_Function2_Bucket_AA58BB93\\": {}
    },
    \\"aws_s3_object\\": {
      \\"cdktfstack_wingapp_Function1_S3Object_2E676DE7\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.cdktfstack_wingapp_Function1_Bucket_219A7294.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      },
      \\"cdktfstack_wingapp_Function2_S3Object_B219AB6E\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.cdktfstack_wingapp_Function2_Bucket_AA58BB93.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    }
  }
}"
`;

exports[`function captures a queue 1`] = `
"const $cap = {};
$cap[\\"queue\\"] = new (require(\\"[REDACTED]/wingsdk/src/target-tf-aws/queue.inflight.ts\\")).QueueClient(process.env[\\"QUEUE_URL_a4155b77\\"]);
async function $proc($cap) {
          await $cap.queue.push(JSON.stringify({ name: \\"Alice\\" }));
        }
exports.handler = async function(event) {
  return await $proc($cap, event);
};"
`;

exports[`function captures a queue 2`] = `
"const $cap = {};
async function $proc($cap, event) {
          console.log(\\"Received \\" + event.name);
        }
async function $sqsEventWrapper($cap, event) {
  for (const record of event.Records ?? []) {
    await $proc($cap, record.body);
  }
}
exports.handler = async function(event) {
  return await $sqsEventWrapper($cap, event);
};"
`;

exports[`function captures a queue 3`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"cdktfstack_wingapp_Function_IamRole_D839DAD0\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      },
      \\"cdktfstack_wingapp_QueueOnMessagecbf6dee05a035c28_IamRole_A620432D\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"cdktfstack_wingapp_Function_IamRolePolicy_7D736E5A\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":[\\\\\\"sqs:SendMessage\\\\\\",\\\\\\"sqs:GetQueueAttributes\\\\\\",\\\\\\"sqs:GetQueueUrl\\\\\\"],\\\\\\"Resource\\\\\\":\\\\\\"\${aws_sqs_queue.cdktfstack_wingapp_Queue_8A990187.arn}\\\\\\",\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.cdktfstack_wingapp_Function_IamRole_D839DAD0.name}\\"
      },
      \\"cdktfstack_wingapp_QueueOnMessagecbf6dee05a035c28_IamRolePolicy_DAC94381\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":[\\\\\\"sqs:ReceiveMessage\\\\\\",\\\\\\"sqs:ChangeMessageVisibility\\\\\\",\\\\\\"sqs:GetQueueUrl\\\\\\",\\\\\\"sqs:DeleteMessage\\\\\\",\\\\\\"sqs:GetQueueAttributes\\\\\\"],\\\\\\"Resource\\\\\\":\\\\\\"\${aws_sqs_queue.cdktfstack_wingapp_Queue_8A990187.arn}\\\\\\",\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.cdktfstack_wingapp_QueueOnMessagecbf6dee05a035c28_IamRole_A620432D.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"cdktfstack_wingapp_Function_IamRolePolicyAttachment_F24018FA\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.cdktfstack_wingapp_Function_IamRole_D839DAD0.name}\\"
      },
      \\"cdktfstack_wingapp_QueueOnMessagecbf6dee05a035c28_IamRolePolicyAttachment_E4CDA806\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.cdktfstack_wingapp_QueueOnMessagecbf6dee05a035c28_IamRole_A620432D.name}\\"
      }
    },
    \\"aws_lambda_event_source_mapping\\": {
      \\"cdktfstack_wingapp_Queue_EventSourceMapping_C8D98616\\": {
        \\"batch_size\\": 1,
        \\"event_source_arn\\": \\"\${aws_sqs_queue.cdktfstack_wingapp_Queue_8A990187.arn}\\",
        \\"function_name\\": \\"\${aws_lambda_function.cdktfstack_wingapp_QueueOnMessagecbf6dee05a035c28_8AC09379.function_name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"cdktfstack_wingapp_Function_EBD52E07\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"QUEUE_URL_a4155b77\\": \\"\${aws_sqs_queue.cdktfstack_wingapp_Queue_8A990187.url}\\",
            \\"WING_FUNCTION_NAME\\": \\"Function\\"
          }
        },
        \\"function_name\\": \\"Function\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.cdktfstack_wingapp_Function_IamRole_D839DAD0.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.cdktfstack_wingapp_Function_Bucket_A67EF78E.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.cdktfstack_wingapp_Function_S3Object_F34234B4.key}\\"
      },
      \\"cdktfstack_wingapp_QueueOnMessagecbf6dee05a035c28_8AC09379\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"Queue-OnMessage-cbf6dee05a035c28\\"
          }
        },
        \\"function_name\\": \\"Queue-OnMessage-cbf6dee05a035c28\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.cdktfstack_wingapp_QueueOnMessagecbf6dee05a035c28_IamRole_A620432D.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.cdktfstack_wingapp_QueueOnMessagecbf6dee05a035c28_Bucket_262299A5.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.cdktfstack_wingapp_QueueOnMessagecbf6dee05a035c28_S3Object_2BDBEE88.key}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"cdktfstack_wingapp_Function_Bucket_A67EF78E\\": {},
      \\"cdktfstack_wingapp_QueueOnMessagecbf6dee05a035c28_Bucket_262299A5\\": {}
    },
    \\"aws_s3_object\\": {
      \\"cdktfstack_wingapp_Function_S3Object_F34234B4\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.cdktfstack_wingapp_Function_Bucket_A67EF78E.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      },
      \\"cdktfstack_wingapp_QueueOnMessagecbf6dee05a035c28_S3Object_2BDBEE88\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.cdktfstack_wingapp_QueueOnMessagecbf6dee05a035c28_Bucket_262299A5.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    },
    \\"aws_sqs_queue\\": {
      \\"cdktfstack_wingapp_Queue_8A990187\\": {}
    }
  }
}"
`;

exports[`function captures primitive values 1`] = `
"const $cap = {};
$cap[\\"num\\"] = 5;
$cap[\\"string\\"] = \\"world\\";
$cap[\\"bool\\"] = true;
$cap[\\"nothing\\"] = null;
async function $proc($cap, event) {
        console.log(\\"Hello, \\" + $cap.string);
        console.log(\\"My favorite number is \\" + $cap.num);
        console.log(\\"Is it raining? \\" + $cap.bool);
        console.log($cap.nothing + \\" hypothesis\\");
      }
exports.handler = async function(event) {
  return await $proc($cap, event);
};"
`;

exports[`function captures primitive values 2`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"cdktfstack_wingapp_Function_IamRole_D839DAD0\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"cdktfstack_wingapp_Function_IamRolePolicy_7D736E5A\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"none:null\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"*\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.cdktfstack_wingapp_Function_IamRole_D839DAD0.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"cdktfstack_wingapp_Function_IamRolePolicyAttachment_F24018FA\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.cdktfstack_wingapp_Function_IamRole_D839DAD0.name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"cdktfstack_wingapp_Function_EBD52E07\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"Function\\"
          }
        },
        \\"function_name\\": \\"Function\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.cdktfstack_wingapp_Function_IamRole_D839DAD0.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.cdktfstack_wingapp_Function_Bucket_A67EF78E.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.cdktfstack_wingapp_Function_S3Object_F34234B4.key}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"cdktfstack_wingapp_Function_Bucket_A67EF78E\\": {}
    },
    \\"aws_s3_object\\": {
      \\"cdktfstack_wingapp_Function_S3Object_F34234B4\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.cdktfstack_wingapp_Function_Bucket_A67EF78E.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    }
  }
}"
`;

exports[`function captures structured values 1`] = `
"const $cap = {};
$cap[\\"map\\"] = {\\"hello\\":\\"world\\",\\"boom\\":{\\"bam\\":123}};
$cap[\\"list\\"] = [1,2,\\"thing\\"];
async function $proc($cap, event) {
          console.log(\\"Map: \\" + JSON.stringify($cap.map));
          console.log(\\"List: \\" + JSON.stringify($cap.list));
        }
exports.handler = async function(event) {
  return await $proc($cap, event);
};"
`;

exports[`function captures structured values 2`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"cdktfstack_wingapp_Function_IamRole_D839DAD0\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"cdktfstack_wingapp_Function_IamRolePolicy_7D736E5A\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"none:null\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"*\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.cdktfstack_wingapp_Function_IamRole_D839DAD0.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"cdktfstack_wingapp_Function_IamRolePolicyAttachment_F24018FA\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.cdktfstack_wingapp_Function_IamRole_D839DAD0.name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"cdktfstack_wingapp_Function_EBD52E07\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"Function\\"
          }
        },
        \\"function_name\\": \\"Function\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.cdktfstack_wingapp_Function_IamRole_D839DAD0.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.cdktfstack_wingapp_Function_Bucket_A67EF78E.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.cdktfstack_wingapp_Function_S3Object_F34234B4.key}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"cdktfstack_wingapp_Function_Bucket_A67EF78E\\": {}
    },
    \\"aws_s3_object\\": {
      \\"cdktfstack_wingapp_Function_S3Object_F34234B4\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.cdktfstack_wingapp_Function_Bucket_A67EF78E.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    }
  }
}"
`;

exports[`two functions reusing the same inflight 1`] = `
"const $cap = {};
$cap[\\"bucket\\"] = new (require(\\"[REDACTED]/wingsdk/src/target-tf-aws/bucket.inflight.ts\\")).BucketClient(process.env[\\"BUCKET_NAME_2025c320\\"]);
async function $proc($cap, event) {
          console.log(\\"Hello, \\" + event.name);
          await $cap.bucket.put(\\"hello.txt\\", JSON.stringify(event));
        }
exports.handler = async function(event) {
  return await $proc($cap, event);
};"
`;

exports[`two functions reusing the same inflight 2`] = `
"const $cap = {};
$cap[\\"bucket\\"] = new (require(\\"[REDACTED]/wingsdk/src/target-tf-aws/bucket.inflight.ts\\")).BucketClient(process.env[\\"BUCKET_NAME_2025c320\\"]);
async function $proc($cap, event) {
          console.log(\\"Hello, \\" + event.name);
          await $cap.bucket.put(\\"hello.txt\\", JSON.stringify(event));
        }
exports.handler = async function(event) {
  return await $proc($cap, event);
};"
`;

exports[`two functions reusing the same inflight 3`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"cdktfstack_wingapp_Function1_IamRole_A1ECB757\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      },
      \\"cdktfstack_wingapp_Function2_IamRole_E9F3A6C2\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"cdktfstack_wingapp_Function1_IamRolePolicy_8CAA50EC\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":[\\\\\\"s3:PutObject*\\\\\\",\\\\\\"s3:Abort*\\\\\\"],\\\\\\"Resource\\\\\\":[\\\\\\"\${aws_s3_bucket.cdktfstack_wingapp_Bucket_A3A25CDC.arn}\\\\\\",\\\\\\"\${aws_s3_bucket.cdktfstack_wingapp_Bucket_A3A25CDC.arn}/*\\\\\\"],\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.cdktfstack_wingapp_Function1_IamRole_A1ECB757.name}\\"
      },
      \\"cdktfstack_wingapp_Function2_IamRolePolicy_1AAD879E\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":[\\\\\\"s3:PutObject*\\\\\\",\\\\\\"s3:Abort*\\\\\\"],\\\\\\"Resource\\\\\\":[\\\\\\"\${aws_s3_bucket.cdktfstack_wingapp_Bucket_A3A25CDC.arn}\\\\\\",\\\\\\"\${aws_s3_bucket.cdktfstack_wingapp_Bucket_A3A25CDC.arn}/*\\\\\\"],\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.cdktfstack_wingapp_Function2_IamRole_E9F3A6C2.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"cdktfstack_wingapp_Function1_IamRolePolicyAttachment_6C0B54BA\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.cdktfstack_wingapp_Function1_IamRole_A1ECB757.name}\\"
      },
      \\"cdktfstack_wingapp_Function2_IamRolePolicyAttachment_909427FB\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.cdktfstack_wingapp_Function2_IamRole_E9F3A6C2.name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"cdktfstack_wingapp_Function1_82A316AA\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"BUCKET_NAME_2025c320\\": \\"\${aws_s3_bucket.cdktfstack_wingapp_Bucket_A3A25CDC.bucket}\\",
            \\"WING_FUNCTION_NAME\\": \\"Function1\\"
          }
        },
        \\"function_name\\": \\"Function1\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.cdktfstack_wingapp_Function1_IamRole_A1ECB757.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.cdktfstack_wingapp_Function1_Bucket_219A7294.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.cdktfstack_wingapp_Function1_S3Object_2E676DE7.key}\\"
      },
      \\"cdktfstack_wingapp_Function2_702AB6AD\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"BUCKET_NAME_2025c320\\": \\"\${aws_s3_bucket.cdktfstack_wingapp_Bucket_A3A25CDC.bucket}\\",
            \\"WING_FUNCTION_NAME\\": \\"Function2\\"
          }
        },
        \\"function_name\\": \\"Function2\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.cdktfstack_wingapp_Function2_IamRole_E9F3A6C2.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.cdktfstack_wingapp_Function2_Bucket_AA58BB93.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.cdktfstack_wingapp_Function2_S3Object_B219AB6E.key}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"cdktfstack_wingapp_Bucket_A3A25CDC\\": {},
      \\"cdktfstack_wingapp_Function1_Bucket_219A7294\\": {},
      \\"cdktfstack_wingapp_Function2_Bucket_AA58BB93\\": {}
    },
    \\"aws_s3_bucket_public_access_block\\": {
      \\"cdktfstack_wingapp_Bucket_PublicAccessBlock_6199A698\\": {
        \\"block_public_acls\\": true,
        \\"block_public_policy\\": true,
        \\"bucket\\": \\"\${aws_s3_bucket.cdktfstack_wingapp_Bucket_A3A25CDC.bucket}\\",
        \\"ignore_public_acls\\": true,
        \\"restrict_public_buckets\\": true
      }
    },
    \\"aws_s3_bucket_server_side_encryption_configuration\\": {
      \\"cdktfstack_wingapp_Bucket_Encryption_3CAE4BE3\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.cdktfstack_wingapp_Bucket_A3A25CDC.bucket}\\",
        \\"rule\\": [
          {
            \\"apply_server_side_encryption_by_default\\": {
              \\"sse_algorithm\\": \\"AES256\\"
            }
          }
        ]
      }
    },
    \\"aws_s3_object\\": {
      \\"cdktfstack_wingapp_Function1_S3Object_2E676DE7\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.cdktfstack_wingapp_Function1_Bucket_219A7294.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      },
      \\"cdktfstack_wingapp_Function2_S3Object_B219AB6E\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.cdktfstack_wingapp_Function2_Bucket_AA58BB93.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    }
  }
}"
`;
